--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<style>
+<style>
     .list-unstyled.file-manager-menu li div a:nth-of-type(1)[aria-expanded = true] i:nth-of-type(1){
         display: none !important;
     }
